--- a/knapp_eda.ipynb
+++ b/knapp_eda.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "995a7ad6",
+   "id": "c6f8b982",
    "metadata": {},
    "source": [
     "# Preprocessing and Visualization "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d13f8f2b",
+   "id": "4710a92b",
    "metadata": {},
    "source": [
     "# Case Study 1: The Malmstrom AFB UFO/Missile Incident"
@@ -133,10 +133,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "561efd9d",
+   "id": "8e5f35bd",
    "metadata": {},
    "source": [
-    "(from chat-gpt):\n",
+    "(from bing-chat-gpt):\n",
     "\n",
     "The Malmstrom AFB UFO/Missile Incident is an event that occurred in March 1967 at the Malmstrom Air Force Base in Montana, USA. Several military personnel reported seeing strange flying objects in the sky, which appeared to be hovering over the base's missile silos. According to some reports, witnesses saw a large red, orange or yellow object hovering over or near the missile silos¹³⁶. Some described it as a disc-shaped craft with flashing lights¹⁴. Others said it looked like a helicopter⁵. \n",
     "\n",
@@ -151,8 +151,15 @@
     "(3) UFO Case: Malmstrom AFB UFO/Missile Incident (March 16, 1967). https://www.theblackvault.com/documentarchive/ufo-case-malmstrom-afb-ufomissile-incident-march-16-1967/ Accessed 3/16/2023.\n",
     "(4) Former Air Force chief claims he once saw UFO firing at nuke missiles .... https://nypost.com/2021/10/21/former-air-force-chief-claims-he-once-saw-ufo-firing-at-nuke-missiles-launched-from-secret-base/ Accessed 3/16/2023.\n",
     "(5) What Were Those Mysterious Craft? - The Washington Post. https://www.washingtonpost.com/archive/politics/1979/01/19/what-were-those-mysterious-craft/1b9d1f3d-dddb-4a92-87b3-0143aa5d7a3e/ Accessed 3/16/2023.\n",
-    "(6) Malmstrom Air Force Base UFO incident - EverybodyWiki Bios & Wiki. https://en.everybodywiki.com/Malmstrom_Air_Force_Base_UFO_incident Accessed 3/16/2023.\n",
-    "\n",
+    "(6) Malmstrom Air Force Base UFO incident - EverybodyWiki Bios & Wiki. https://en.everybodywiki.com/Malmstrom_Air_Force_Base_UFO_incident Accessed 3/16/2023."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f49116e",
+   "metadata": {},
+   "source": [
+    "## Visual Analysis\n",
     "\n",
     "Additionally, according to some sources, the UFOs were seen for about **20 minutes** by security patrols and maintenance crews at the Malmstrom Air Force Base on March 16, 1967. However, other sources suggest that the UFO sighting occurred on March 24, 1967, in a nearby town called Belt, Montana. The exact date and duration of the sighting are still disputed by different witnesses and researchers.\n",
     "\n",
@@ -162,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3d859a1b",
+   "id": "5314c6bc",
    "metadata": {},
    "outputs": [
     {
@@ -1399,7 +1406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adc29e65",
+   "id": "641e7552",
    "metadata": {},
    "source": [
     "Out of the 7 reported UFO sightings in March of 1967, 4 were round."
@@ -1407,7 +1414,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5cc56eb",
+   "id": "75960bfc",
+   "metadata": {},
+   "source": [
+    "## Clustering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3a6261f",
    "metadata": {},
    "source": [
     "# Case Study 2: "
